manifest/objects/DNBConnect__D_B_Custom_Log__c.object
<CustomObject>
    <description>Holds all D&amp;B code related logs</description>
    <fields>
        <fullName>DNBConnect__Line__c</fullName>
        <label>Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DNBConnect__Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBConnect__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>D&amp;B Connect Custom Log</label>
    <nameField>
        <label>D&amp;B Connect Custom Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Connect Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>